# EOL-Net

./: .gitignore  README.md  pyproject.toml
app/apps/api/: admin.py  forms.py  models.py  pagination.py  permissions.py  serializers.py  throttles.py  urls.py  views.py
app/apps/api/migrations/: 0001_initial.py
app/apps/eol/: abstracts.py  admin.py  apps.py  models.py  resources.py  urls.py  views.py
app/apps/eol/migrations/: 0001_initial.py
app/core/: settings.py  urls.py
app/templates/: base.html  index.html
app/test/: sample_data.py
